tests/negative/test_cn_asgn_arr_cn_elems.orb
fnc main() {
    let i32 cn[4] array{0, 1, 2, 3};
    array[0] = 100;
}